[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/TrackBuilder/TrackBuilder.gd" type="Script" id=1]
[ext_resource path="res://Textures/Icons/10.jpg" type="Texture" id=2]
[ext_resource path="res://Textures/Icons/1.jpg" type="Texture" id=3]
[ext_resource path="res://Textures/Icons/2.jpg" type="Texture" id=4]
[ext_resource path="res://Textures/Icons/0.jpg" type="Texture" id=5]
[ext_resource path="res://Scripts/TrackBuilder/Draggable.gd" type="Script" id=6]
[ext_resource path="res://Textures/Icons/20.jpg" type="Texture" id=7]
[ext_resource path="res://Textures/Icons/-1.jpg" type="Texture" id=8]
[ext_resource path="res://Textures/Icons/24.jpg" type="Texture" id=9]
[ext_resource path="res://Textures/Icons/4.jpg" type="Texture" id=10]
[ext_resource path="res://Textures/Icons/30.jpg" type="Texture" id=11]
[ext_resource path="res://Textures/Icons/31.jpg" type="Texture" id=12]
[ext_resource path="res://Textures/Icons/40.jpg" type="Texture" id=13]
[ext_resource path="res://Textures/Icons/41.jpg" type="Texture" id=14]

[node name="Background" type="ColorRect"]
margin_right = 1021.0
margin_bottom = 599.0
color = Color( 0.0561905, 0.201585, 0.246094, 1 )
script = ExtResource( 1 )

[node name="Options" type="Panel" parent="."]
margin_left = 600.0
margin_top = 50.0
margin_right = 950.0
margin_bottom = 550.0

[node name="OuterVSplit" type="VSplitContainer" parent="Options"]
margin_left = 30.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 470.0
split_offset = 5
collapsed = true
dragger_visibility = 1

[node name="Quit Button" type="Button" parent="Options/OuterVSplit"]
margin_right = 290.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Quit Track Builder (Lose Changes)"

[node name="InnerVSplit" type="VSplitContainer" parent="Options/OuterVSplit"]
margin_top = 42.0
margin_right = 290.0
margin_bottom = 440.0
split_offset = 5
collapsed = true
dragger_visibility = 1

[node name="Btns" type="GridContainer" parent="Options/OuterVSplit/InnerVSplit"]
margin_right = 290.0
margin_bottom = 48.0
columns = 3

[node name="SaveTrack" type="Button" parent="Options/OuterVSplit/InnerVSplit/Btns"]
margin_right = 78.0
margin_bottom = 20.0
text = "Save Track"

[node name="LoadTrack" type="Button" parent="Options/OuterVSplit/InnerVSplit/Btns"]
margin_left = 82.0
margin_right = 161.0
margin_bottom = 20.0
text = "Load Track"

[node name="ClearTrack" type="Button" parent="Options/OuterVSplit/InnerVSplit/Btns"]
margin_left = 165.0
margin_right = 246.0
margin_bottom = 20.0
text = "Clear Track"

[node name="TestTrack" type="Button" parent="Options/OuterVSplit/InnerVSplit/Btns"]
margin_top = 24.0
margin_right = 78.0
margin_bottom = 48.0
text = "Test Track"

[node name="Label" type="Label" parent="Options/OuterVSplit/InnerVSplit/Btns"]
margin_left = 82.0
margin_top = 29.0
margin_right = 161.0
margin_bottom = 43.0
text = "Grid Size:"
align = 2

[node name="TrackSizeLE" type="LineEdit" parent="Options/OuterVSplit/InnerVSplit/Btns"]
margin_left = 165.0
margin_top = 24.0
margin_right = 246.0
margin_bottom = 48.0
text = "6"
max_length = 1

[node name="TPScroll" type="ScrollContainer" parent="Options/OuterVSplit/InnerVSplit"]
margin_top = 60.0
margin_right = 290.0
margin_bottom = 398.0

[node name="TPGrid" type="GridContainer" parent="Options/OuterVSplit/InnerVSplit/TPScroll"]
margin_right = 252.0
margin_bottom = 380.0
columns = 4

[node name="-1" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 8 )
script = ExtResource( 6 )

[node name="0" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="1" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
texture = ExtResource( 3 )
script = ExtResource( 6 )

[node name="2" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 192.0
margin_right = 252.0
margin_bottom = 60.0
texture = ExtResource( 4 )
script = ExtResource( 6 )

[node name="10" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_top = 64.0
margin_right = 60.0
margin_bottom = 124.0
texture = ExtResource( 2 )
script = ExtResource( 6 )

[node name="13" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 64.0
margin_top = 64.0
margin_right = 124.0
margin_bottom = 124.0
texture = ExtResource( 2 )
flip_h = true
script = ExtResource( 6 )

[node name="11" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 128.0
margin_top = 64.0
margin_right = 188.0
margin_bottom = 124.0
texture = ExtResource( 2 )
flip_v = true
script = ExtResource( 6 )

[node name="12" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 192.0
margin_top = 64.0
margin_right = 252.0
margin_bottom = 124.0
texture = ExtResource( 2 )
flip_h = true
flip_v = true
script = ExtResource( 6 )

[node name="20" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_top = 128.0
margin_right = 60.0
margin_bottom = 188.0
texture = ExtResource( 7 )
script = ExtResource( 6 )

[node name="23" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 64.0
margin_top = 128.0
margin_right = 124.0
margin_bottom = 188.0
texture = ExtResource( 7 )
flip_h = true
script = ExtResource( 6 )

[node name="21" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 128.0
margin_top = 128.0
margin_right = 188.0
margin_bottom = 188.0
texture = ExtResource( 7 )
flip_v = true
script = ExtResource( 6 )

[node name="22" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 192.0
margin_top = 128.0
margin_right = 252.0
margin_bottom = 188.0
texture = ExtResource( 7 )
flip_h = true
flip_v = true
script = ExtResource( 6 )

[node name="24" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_top = 192.0
margin_right = 60.0
margin_bottom = 252.0
texture = ExtResource( 9 )
script = ExtResource( 6 )

[node name="25" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 64.0
margin_top = 192.0
margin_right = 124.0
margin_bottom = 252.0
texture = ExtResource( 9 )
flip_h = true
script = ExtResource( 6 )

[node name="3" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 128.0
margin_top = 192.0
margin_right = 188.0
margin_bottom = 252.0
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="4" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 192.0
margin_top = 192.0
margin_right = 252.0
margin_bottom = 252.0
texture = ExtResource( 10 )
script = ExtResource( 6 )

[node name="30" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_top = 256.0
margin_right = 60.0
margin_bottom = 316.0
texture = ExtResource( 11 )
script = ExtResource( 6 )

[node name="31" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 64.0
margin_top = 256.0
margin_right = 124.0
margin_bottom = 316.0
texture = ExtResource( 12 )
script = ExtResource( 6 )

[node name="40" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 128.0
margin_top = 256.0
margin_right = 188.0
margin_bottom = 316.0
texture = ExtResource( 13 )
script = ExtResource( 6 )

[node name="42" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 192.0
margin_top = 256.0
margin_right = 252.0
margin_bottom = 316.0
texture = ExtResource( 13 )
flip_v = true
script = ExtResource( 6 )

[node name="41" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_top = 320.0
margin_right = 60.0
margin_bottom = 380.0
texture = ExtResource( 14 )
script = ExtResource( 6 )

[node name="43" type="TextureRect" parent="Options/OuterVSplit/InnerVSplit/TPScroll/TPGrid"]
margin_left = 64.0
margin_top = 320.0
margin_right = 124.0
margin_bottom = 380.0
texture = ExtResource( 14 )
flip_h = true
script = ExtResource( 6 )

[node name="TrackPanel" type="Panel" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0

[node name="track" type="GridContainer" parent="TrackPanel"]
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 450.0
columns = 6

[node name="FileDialogue" type="FileDialog" parent="."]
margin_left = 78.0
margin_top = 94.0
margin_right = 525.0
margin_bottom = 518.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
current_dir = "res://SavedData/Tracks"
current_file = "0.txt"
current_path = "res://SavedData/Tracks/0.txt"

[connection signal="pressed" from="Options/OuterVSplit/Quit Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Options/OuterVSplit/InnerVSplit/Btns/SaveTrack" to="." method="_on_SaveTrack_pressed"]
[connection signal="pressed" from="Options/OuterVSplit/InnerVSplit/Btns/LoadTrack" to="." method="_on_LoadTrack_pressed"]
[connection signal="pressed" from="Options/OuterVSplit/InnerVSplit/Btns/ClearTrack" to="." method="_on_ClearTrack_pressed"]
[connection signal="pressed" from="Options/OuterVSplit/InnerVSplit/Btns/TestTrack" to="." method="_on_TestTrack_pressed"]
[connection signal="text_entered" from="Options/OuterVSplit/InnerVSplit/Btns/TrackSizeLE" to="." method="_on_LineEdit_text_entered"]
[connection signal="confirmed" from="FileDialogue" to="." method="_on_FileDialogue_confirmed"]
